# message-flow

./: .gitignore  LICENSE  Makefile  README.md  consumer_example.py  mkdocs.yml  producer_example.py  pyproject.toml
.github/workflows/: ci.yml  test.yml  upload-previews.yml
docs/: index.md
docs/api/: channel.md  message.md  message_flow.md
docs/stylesheets/: extra.css
event_flow/events/: __init__.py
event_flow/events/publisher/: __init__.py  domain_event_publisher.py  domain_event_publisher_impl.py
event_flow/events/shared/: __init__.py  default_domain_event_name_mapping.py  domain_event.py  domain_event_message_factory.py  domain_event_name_mapping.py  event_message_headers.py
event_flow/events/subscriber/: __init__.py  domain_event_dispatcher.py  domain_event_envelope.py  domain_event_envelope_impl.py  domain_event_handler.py  domain_event_handlers.py  domain_event_handlers_builder.py
event_flow/messaging/: __init__.py
event_flow/messaging/consumer/: __init__.py  message_consumer.py  message_handler.py  message_subscription.py
event_flow/messaging/producer/: __init__.py  message_producer.py
event_flow/messaging/shared/: __init__.py  header_not_found.py  message.py  message_builder.py  message_impl.py  messaging_exception.py
event_flow/serde/: __init__.py  deserializer.py  serializer.py
event_flow/utils/: __init__.py  export_decorator.py
src/event_flow/: __init__.py
src/event_flow/app/: __init__.py  event_flow.py
src/event_flow/app/_internal/: __init__.py  event_flow_schema.py
src/event_flow/app/_message_management/: __init__.py  dispatcher.py  routing_headers.py
src/event_flow/channel/: __init__.py  channel.py
src/event_flow/channel/_internal/: __init__.py  channel_construction.py  channel_info.py
src/event_flow/message/: __init__.py  correlation_id.py  message.py  message_info.py  message_trait.py  payload.py
src/event_flow/message/_internal/: message_construction.py
src/event_flow/operation/: __init__.py
src/event_flow/operation/_internal/: __init__.py  operation_construction.py  operation_schema.py
src/event_flow/sdk/: __init__.py
src/event_flow/sdk/application/: __init__.py  event_flow.py
src/event_flow/sdk/application/channel/: __init__.py  action_type.py  channel.py  operation.py
src/event_flow/sdk/application/message/: __init__.py  header.py  message.py  payload.py
src/event_flow/sdk/events/: __init__.py  dispatcher.py  publisher.py  routing_headers.py
src/event_flow/sdk/messaging/: __init__.py  consumer.py  producer.py
src/event_flow/sdk/utils/: __init__.py  export_decorator.py
src/event_flow/shared/: __init__.py
src/event_flow/utils/: visibility.py
src/message_flow/: __init__.py  __main__.py
src/message_flow/app/: __init__.py  __init__.pyi  _fast_api.py  base_middleware.py  message_flow.py
src/message_flow/app/_internal/: __init__.py  __init__.pyi  channels.py  message_flow_schema.py
src/message_flow/app/_internal/async_api_studio/: __init__.py  __init__.pyi  config.py  page.py
src/message_flow/app/_message_management/: __init__.pyi  dispatcher.py  producer.py  routing_headers.py
src/message_flow/app/_simple_messaging/: __init__.py  __init__.pyi  simple_consumer.py  simple_producer.py
src/message_flow/app/messaging/: consumer.py  producer.py
src/message_flow/channel/: __init__.py  channel.py
src/message_flow/channel/_internal/: __init__.pyi  channel_schema.py
src/message_flow/cli/: _cli_app.py  _documentation_server.py  _logging_level.py  cli_app.py  documentation_server.py  entrypoint.py  logging_level.py  main.py
src/message_flow/cli/_async_api_schema/: __init__.pyi  request_handler.py  server.py
src/message_flow/dependencies/: __init__.pyi  call.py  dependent.py  depends.py  parameter.py  typed_annotation.py
src/message_flow/message/: __init__.pyi  correlation_id.py  header.py  message.py  message_example.py  message_info.py  message_trait.py  payload.py
src/message_flow/message/_internal/: __init__.py  __init__.pyi  message_construction.py  message_schema.py
src/message_flow/operation/: __init__.pyi  action_type.py  operation.py  operation_reply.py
src/message_flow/operation/_internal/: __init__.pyi  operation_construction.py  operation_info.py  operation_schema.py
src/message_flow/shared/: __init__.pyi  components.py  reference.py
src/message_flow/utils/: __init__.py  log.py  visibility.py
tests/dependencies/: conftest.py  test_dependent.py
tests/events/subscriber/: conftest.py  example_domain_event.py  test_domain_event_dispatcher.py
tests/message/: test_correlation_id.py  test_message.py  test_message_example.py  test_message_trait.py
tests/message_flow/: conftest.py  test_command_sending.py  test_dispatching.py  test_event_publishing.py  test_message_flow.py
tests/message_flow/message_flow_unit_test_support/: __init__.py  consumer.py  fake_message_producer.py  message_flow_unit_test_support.py  message_with_channel.py  producer.py
tests/operation/: test_operation.py
tests/schema/: conftest.py  test_channel.py  test_message.py  test_message_flow.py  test_operation.py
