[tool.poetry]
name = "event-flow"
version = "0.1.0"
description = "Asynchronous Communication Framework"
authors = ["Valentin Vorobyev <voro6yov.valentin@gmail.com>"]
license = "Apache License 2.0"
readme = "README"
packages = [{include = "event_flow"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["event_flow", "tests"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["name-defined", "attr-defined", "no-redef"]